change name  class

--- a/index.html
+++ b/index.html
@@ -167,12 +167,12 @@
                 >
               </li>
               <li>
-                <a href="mailto:info@devstudio.com" class="contact-item"
+                <a href="mailto:info@devstudio.com" class="adress-item"
                   >info@devstudio.com</a
                 >
               </li>
               <li>
-                <a href="tel:+380961111111" class="contact-item"
+                <a href="tel:+380961111111" class="adress-item"
                   >+380961111111</a
                 >
               </li>
