--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           >
         </li>
         <li class="contact-item">
-          <a href="tel:+380961111111" class="contact-link">+380961111111</a>
+          <a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a>
         </li>
       </ul>
     </nav>
@@ -53,7 +53,7 @@
     <main>
       <!--Блок Hero-->
       <section class="hero">
-        <div>
+        <div class="hero-container">
           <h1 class="hero-title">эффективные решения для вашего бизнеса</h1>
           <button class="hero-button">Заказать услугу</button>
         </div>
