Fixed a lot of problems. Add positions.

--- a/index.html
+++ b/index.html
@@ -70,21 +70,21 @@
                 формированию позиции.
               </p>
             </li>
-            <li>
+            <li class="advantage-item">
               <p class="advantage-title">Пунктуальность</p>
               <p class="advantage-text">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li>
+            <li class="advantage-item">
               <p class="advantage-title">Планирование</p>
               <p class="advantage-text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li>
+            <li class="advantage-item">
               <p class="advantage-title">Современные технологии</p>
               <p class="advantage-text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -100,13 +100,13 @@
         <div class="container">
           <h2 class="occupation-title">Чем мы занимаемся</h2>
           <ul class="occupation-list">
-            <li>
+            <li class="occupation-item">
               <img src="./images/one.jpg "  alt="десктопные приложения" width="370" height="294" />
             </li>
-            <li>
+            <li class="occupation-item">
               <img src="./images/two.jpg" alt="дизайнерские решения" width="370" height="294" />
             </li>
-            <li>
+            <li class="occupation-item">
               <img src="./images/three.jpg" alt="мобильные приложения" width="370" height="294" />
             </li>
           </ul>
@@ -167,12 +167,12 @@
                 >
               </li>
               <li>
-                <a href="mailto:info@devstudio.com" class="adress-item"
+                <a href="mailto:info@devstudio.com" class="adress-mail"
                   >info@devstudio.com</a
                 >
               </li>
               <li>
-                <a href="tel:+380961111111" class="adress-item"
+                <a href="tel:+380961111111" class="adress-tel"
                   >+380961111111</a
                 >
               </li>
