Fixed many thinks.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <a class="nav-link" href="./portfolio.html">Портфолио</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="">Контакты</a>
+          <a class="nav-link" href="#contact">Контакты</a>
         </li>
       </ul>
   
@@ -47,7 +47,6 @@
       </ul>
     </nav>
 </div>
-
     </header>
 
     <main>
@@ -61,7 +60,7 @@
       <!--Блок приемущества-->
       <section class="advantage">
         <div class="container">
-          <h2 class="advantage-head">Приемущества</h2>
+          <h2 class="usless-title">Приемущества</h2>
           <ul class="advantage-list">
             <li class="advantage-item">
               <p class="advantage-title">Внимание к деталям</p>
@@ -158,7 +157,7 @@
             >Web<span class="footer-studio">Studio</span>
           </a>
           <address>
-            <ul class="footer-contact">
+            <ul class="footer-contact" id="contact">
               <li>
                 <a
                   href="https://goo.gl/maps/G2omB5fdm2hjpHhv8"
@@ -173,7 +172,7 @@
               </li>
               <li>
                 <a href="tel:+380961111111" class="adress-tel"
-                  >+380961111111</a
+                  >+38 096 111 11 11</a
                 >
               </li>
             </ul>
