--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
     <link rel="stylesheet" href="./css/style.css" />
-    <title>WebStudio</title>
+    <title>Portfolio</title>
   </head>
 
   <body>
