Fixed position portfolio items.
Use nth child. Add hidden titles.

--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
     <main>
       <section class="portfolio-menu">
       <div class="container">
-        <h1 class="usless-title">Портфолио</h1>
+        <h1 class="visually-hidden">Портфолио</h1>
 
         <ul class="filter-nav">
           <li><a href="" class="filter-item current">Все</a></li>
