--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <!--Блок приемущества-->
       <section class="advantage">
         <div class="container">
-          <h2 class="usless-title">Приемущества</h2>
+          <h2 class="visually-hidden">Приемущества</h2>
           <ul class="advantage-list">
             <li class="advantage-item">
               <p class="advantage-title">Внимание к деталям</p>
@@ -117,13 +117,14 @@
           <h2 class="team-title">Наша команда</h2>
           <ul class="team-list">
             <li class="team-item">
-              <img src="./images/img.jpg" alt="Product Designer" width="270" height="260" />
+              <img class="team-image" src="./images/img.jpg" alt="Product Designer" width="270" height="260" />
 
               <h3 class="team-member">Игорь Демьяненко</h3>
               <p lang="en" class="team-profession">Product Designer</p>
             </li>
             <li class="team-item">
               <img
+              class="team-image"
                 src="./images/imgtwo.jpg"
                 alt="Frontend Developer"
                 width="270"
@@ -134,13 +135,13 @@
               <p lang="en" class="team-profession">Frontend Developer</p>
             </li>
             <li class="team-item">
-              <img src="./images/imgthree.jpg" alt="Marketing" width="270" height="260" />
+              <img class="team-image" src="./images/imgthree.jpg" alt="Marketing" width="270" height="260" />
 
               <h3 class="team-member">Николай Тарасов</h3>
               <p lang="en" class="team-profession">Marketing</p>
             </li>
             <li class="team-item">
-              <img src="./images/imgfour.jpg" alt="UI Designer" width="270" height="260" />
+              <img class="team-image" src="./images/imgfour.jpg" alt="UI Designer" width="270" height="260" />
 
               <h3 class="team-member">Михаил Ермаков</h3>
               <p lang="en" class="team-profession">UI Designer</p>
