Add class to image

--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@
           <h2 class="occupation-title">Чем мы занимаемся</h2>
           <ul class="occupation-list">
             <li class="occupation-item">
-              <img src="./images/one.jpg "  alt="десктопные приложения" width="370" height="294" />
+              <img class="occupation-image" src="./images/one.jpg "  alt="десктопные приложения" width="370" height="294" />
             </li>
             <li class="occupation-item">
-              <img src="./images/two.jpg" alt="дизайнерские решения" width="370" height="294" />
+              <img class="occupation-image" src="./images/two.jpg" alt="дизайнерские решения" width="370" height="294" />
             </li>
             <li class="occupation-item">
-              <img src="./images/three.jpg" alt="мобильные приложения" width="370" height="294" />
+              <img class="occupation-image" src="./images/three.jpg" alt="мобильные приложения" width="370" height="294" />
             </li>
           </ul>
         </div>
