--- a/portfolio.html
+++ b/portfolio.html
@@ -66,63 +66,63 @@
         <ul class="portfolio">
           <li class="portfolio-item">
             <a href="" class="portfolio-link">
-              <img src="./images/Technocrack.jpg" alt="Технокряк" width="370" height="294" />
+              <img class="portfolio-image" src="./images/Technocrack.jpg" alt="Технокряк" width="370" height="294" />
               <h2 class="portfolio-title">Технокряк</h2>
               <p class="portfolio-type">Веб-сайт</p>
             </a>
           </li>
           <li class="portfolio-item">
             <a href="" class="portfolio-link">
-              <img src="./images/nba.jpg" alt="Постер New Orlean vs Goled Star" width="370" height="294" />
+              <img class="portfolio-image" src="./images/nba.jpg" alt="Постер New Orlean vs Goled Star" width="370" height="294" />
               <h2 class="portfolio-title">Постер New Orlean vs Goled Star</h2>
               <p class="portfolio-type">Дизайн</p>
             </a>
           </li>
           <li class="portfolio-item">
             <a href="" class="portfolio-link">
-              <img src="./images/seafood.jpg" alt="Эмблема ресторана" width="370" height="294" />
+              <img class="portfolio-image" src="./images/seafood.jpg" alt="Эмблема ресторана" width="370" height="294" />
               <h2 class="portfolio-title">Ресторан Seafood</h2>
               <p class="portfolio-type">Приложение</p>
             </a>
           </li>
           <li class="portfolio-item">
             <a href="" class="portfolio-link">
-              <img src="./images/headphones.jpg" alt="Наушники" width="370" height="294" />
+              <img class="portfolio-image" src="./images/headphones.jpg" alt="Наушники" width="370" height="294" />
               <h2 class="portfolio-title">Проект Prime</h2>
               <p class="portfolio-type">Маректинг</p>
             </a>
           </li>
           <li class="portfolio-item">
             <a href="" class="portfolio-link">
-              <img src="./images/boxes.jpg" alt="Коробки" width="370" height="294" />
+              <img class="portfolio-image" src="./images/boxes.jpg" alt="Коробки" width="370" height="294" />
               <h2 class="portfolio-title">Проект Boxes</h2>
               <p class="portfolio-type">Приложение</p>
             </a>
           </li>
           <li class="portfolio-item">
             <a href="" class="portfolio-link">
-              <img src="./images/display.jpg" alt="Дисплей" width="370" height="294" />
+              <img class="portfolio-image" src="./images/display.jpg" alt="Дисплей" width="370" height="294" />
               <h2 class="portfolio-title">Inspiration has no Borders</h2>
               <p class="portfolio-type">Веб-сайт</p>
             </a>
           </li>
           <li class="portfolio-item">
             <a href="" class="portfolio-link">
-              <img src="./images/book.jpg" alt="Журнал" width="370" height="294" />
+              <img class="portfolio-image" src="./images/book.jpg" alt="Журнал" width="370" height="294" />
               <h2 class="portfolio-title">Издание Limited Edition</h2>
               <p class="portfolio-type">Дизайн</p>
             </a>
           </li>
           <li class="portfolio-item">
             <a href="" class="portfolio-link">
-              <img src="./images/lab.jpg" alt="Бирка" width="370" height="294" />
+              <img class="portfolio-image" src="./images/lab.jpg" alt="Бирка" width="370" height="294" />
               <h2 class="portfolio-title">Проект LAB</h2>
               <p class="portfolio-type">Маркетинг</p>
             </a>
           </li>
           <li class="portfolio-item">
             <a href="" class="portfolio-link">
-              <img src="./images/bussines.jpg" alt="Ноутбук" width="370" height="294" />
+              <img class="portfolio-image" src="./images/bussines.jpg" alt="Ноутбук" width="370" height="294" />
               <h2 class="portfolio-title">Growing Business</h2>
               <p class="portfolio-type">Приложение</p>
             </a>
